--- a/guitar/i.html
+++ b/guitar/i.html
@@ -1,7 +1,7 @@
 <div id="pageTitle">Guitar</div>
 
-<div class="flex import_Data">
-
+<div class="import_Data flex">
+  
 <div id="links" class="img16">
   <a href="http://guitar.ru/"><img src="http://guitar.ru/favicon.ico"> guitar.ru</a><br>
   <a href="http://www.gitaristu.ru/"><img src="http://www.gitaristu.ru/favicon.ico"> gitaristu.ru</a><br>
@@ -68,5 +68,4 @@
   <img src="../guitar/mccarty_singlecut_594_500.png" alt="McCarty Singlecut 594" style="float: left">
   <a href="https://www.prsguitars.com/index.php/electrics/model/mccarty_singlecut_594_2020">McCarty Singlecut 594</a>
 </div>
-
 </div>
