--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="headerMenu"></div>
 </header>
 
-<main>
+<main class="import_Data flex">
   <style>
     #headerMenu {
       height: 100vh;
