--- a/programming/css.html
+++ b/programming/css.html
@@ -1,6 +1,5 @@
 <div id="pageTitle">CSS</div>
 
-<div class="flex">
   <div id="links">
     <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
     <a href="https://www.w3.org/TR/CSS/#css"><img src="https://www.w3.org/favicon.ico" alt="w3"></a>
@@ -688,8 +687,8 @@ zoom: 200;
 }
 </code></pre>
 </div>
-</div>
-<hr>
+
+<div>
 <h1><a href="http://lesscss.org/features/"><img src="http://lesscss.org/public/ico/favicon.ico" alt="lesscss.org"></a> less</h1>
 <pre><code class="less">
 < link rel="stylesheet/less" type="text/css" href="styles.less" />
@@ -760,3 +759,4 @@ body {
         animation-delay: 0.3s * $i;
     }
 }</pre>
+</div>
