--- a/programming/html.html
+++ b/programming/html.html
@@ -1,6 +1,5 @@
 <div id="pageTitle">HTML</div>
 
-<div class="flex">
   <div id="links">
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
     <a href="https://www.w3.org/html/"><img src="https://www.w3.org/favicon.ico" alt="w3.org"></a>
@@ -139,7 +138,7 @@ value=""</pre>
 </details>
 </div>
 
-</div>
+<div>
 
 <article>
 
@@ -570,3 +569,4 @@ value=""</pre>
             fill="url(#grad1)" />
     </svg>
 </article>
+</div>
