--- a/surf/i.html
+++ b/surf/i.html
@@ -1,9 +1,7 @@
-
 <div id="pageTitle">Surfing</div>
 
-<article>
+<div class="import_Data flex">
 
-	<div class="flex">
 		<div>
 <li><a href="https://www.surfmakers-lanka.ru/blog-surf-school"> Блог школы серфинга на Шри-Ланке</a></li>
 <li><a href="http://surfstories.ru/"><img src="http://surfstories.ru/favicon.ico" height="16px"> «Серфсторис-ру»</a></li>
@@ -17,7 +15,7 @@
 <li><a href="https://www.youtu.be/esV6ypDDoVA">BIGGEST WAVES EVER SURFED IN HISTORY | LAS OLAS MÁS GRANDES JAMÁS SURFEADAS</a></li>
 		</div>
 
-<div class="import_Data flex lazy">
+<div class="lazy">
   
 <p>Серфер — это человек, который может поймать правильную волну и прокатиться на ней, используя свою ловкость и специальную экипировку. Некоторые серферы специально переезжают к океану, чтобы совмещать серфинг с работой. Кто-то из серферов начинают работать в этой же сфере: держат прокаты оборудования, создают школы и лагеря.</p>
 <p>У серфера должно быть свое оборудование или понимание, какую доску нужно брать в прокате. Он знает, как выбрать место и время для катания. Серфер умеет предсказать поведение волны и оказаться в нужном месте, чтобы ее поймать.</p>
@@ -146,4 +144,3 @@
   </tbody>
 </table>
 </div>
-</article>
