content:rxjs,git,nodejs

--- a/programming/css.html
+++ b/programming/css.html
@@ -17,8 +17,7 @@
   </div>
   <div>
     <li><a href="https://whitepaper.tools"><img src="http://whitepaper.tools/favicon.ico" alt="whitepaper tools"> whitepaper.tools</a></li>
-    <li><a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"> reshadow </a>
-    <a href="https://github.com/lttb/reshadow"><img src="https://github.githubassets.com/favicon.ico" alt="github.com/lttb/reshadow" height="16px"></a></li>
+    <li><a href="https://reshadow.dev/"><img src="https://reshadow.dev/public/favicon/favicon.ico" alt="reshadow.dev" height="16px"> reshadow </a> . <a href="https://github.com/lttb/reshadow"></a></li>
     <li>cssinjs / styled components</li>
     <a href="https://habr.com/ru/post/203440/">BEM (block element modifier)</a><br>
     <li>CSS Modules , пропсы </li>
@@ -26,10 +25,10 @@
     <li><a href="http://htmlbook.ru/samcss/kaskadirovanie">Cascading</a></li>
     <li>шлюзы</li>
     <a href="https://www.youtube.com/channel/UCbq5voeHkiCc5YducCiuUWA/">MinskCSS</a><br>
-    <a href="https://youtu.be/zN63Kxsr9-w">Keeping it simple with CSS that scales / Andy Bell</a> <a href="https://frontendconf.ru/moscow/2019/abstracts/6109"></a><br>
-    <a href="https://youtu.be/O1A_QCptiIM">Make a World on Pure CSS / Юлия Музафарова</a> <a href="https://frontendconf.ru/moscow/2019/abstracts/5937"></a><br>
-    <a href="https://youtu.be/PoWpkLeJnBA">Типы данных в CSS / София Валитова (ВКонтакте)</a> <a href="https://frontendconf.ru/moscow/2019/abstracts/5964"></a><br>
-    <a href="https://youtu.be/2UIwHWQeJBs">CSS — язык программирования / Никита Дубко (Яндекс)</a> <a href="https://mefody.github.io/talks/css-programming/"></a><br>
+    <a href="https://youtu.be/zN63Kxsr9-w">Keeping it simple with CSS that scales / Andy Bell</a> . <a href="https://frontendconf.ru/moscow/2019/abstracts/6109"></a><br>
+    <a href="https://youtu.be/O1A_QCptiIM">Make a World on Pure CSS / Юлия Музафарова</a> . <a href="https://frontendconf.ru/moscow/2019/abstracts/5937"></a><br>
+    <a href="https://youtu.be/PoWpkLeJnBA">Типы данных в CSS / София Валитова (ВКонтакте)</a> . <a href="https://frontendconf.ru/moscow/2019/abstracts/5964"></a><br>
+    <a href="https://youtu.be/2UIwHWQeJBs">CSS — язык программирования / Никита Дубко (Яндекс)</a> . <a href="https://mefody.github.io/talks/css-programming/"></a><br>
   </div>
 
 <div><pre><code>
