--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -1274,8 +1274,15 @@ console.log(p.a, p.b); // 1, 42
 
 			</code></pre></details></li>
     <li><details><summary>WebSocket</summary>
-      <pre><code>
+      <pre><code>npm i ws -save
+        WSS://
+события:
+  onopen //при установке соединения
+  onclose
+  onmessage //при получении данных
+  onerror
 
+webSocket.send(data) //отправка данных на сервер
       </code></pre></details></li>
     <li><details><summary>Web Components</summary>
       <pre><code>
