headerMenu,navLink,content:mongoDB

--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -22,16 +22,16 @@
 <main class="import_Data flex">
 
 <nav>
-	<a class="navLink">Alegrias</a>
-	<a class="navLink">Bulerias</a>
-	<a class="navLink">Granaina</a>
-	<a class="navLink">Malaguena</a>
-	<a class="navLink">Petenera</a>
-	<a class="navLink">Seguiriya</a>
-	<a class="navLink">Solea</a>
-	<a class="navLink">Tangos</a>
-	<a class="navLink">Tarantas</a>
-	<a class="navLink">Tientos</a>
+	<a>Alegrias</a>
+	<a>Bulerias</a>
+	<a>Granaina</a>
+	<a>Malaguena</a>
+	<a>Petenera</a>
+	<a>Seguiriya</a>
+	<a>Solea</a>
+	<a>Tangos</a>
+	<a>Tarantas</a>
+	<a>Tientos</a>
 </nav>
 
 <div id="links" class="img16">
