--- a/programming/index.html
+++ b/programming/index.html
@@ -65,9 +65,6 @@ s { color: red; }
 <a>
     <img src="../icons/css.svg" alt="css">
     <span>CSS</span></a>
-<a>
-    <img src="https://www.mongodb.com/assets/images/global/favicon.ico" alt="MongoDB">
-    MongoDB</a>
 </nav>
 <nav>
 <a>
@@ -91,9 +88,6 @@ s { color: red; }
     <img src="https://git-scm.com/favicon.ico" alt="Git">
     <span>Git</span></a>
 <a>
-    <img src="https://nodejs.org/static/images/logo.svg" alt="Node.js">
-    <span class="hidden">NodeJS</span></a>
-<a>
     <img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt="webpack">
     <span class="hidden">webpack</span></a>
 </nav>
@@ -113,6 +107,17 @@ s { color: red; }
 <a>
     <img src="../icons/vue.svg" alt="vue">
     <span style="color: #41b883">Vue</span></a>
+</nav>
+<nav>
+<a>
+    <img src="https://nodejs.org/static/images/logo.svg" alt="Node.js">
+    <span class="hidden">NodeJS</span></a>
+<a>
+    <img src="https://expressjs.com/images/favicon.png" alt="ExpressJS">
+    <span>ExpressJS</span></a>
+<a>
+    <img src="https://www.mongodb.com/assets/images/global/favicon.ico" alt="MongoDB">
+    MongoDB</a>
 </nav>
 
 <div id="links">
@@ -377,18 +382,21 @@ $ gzip -6 -c file.txt > file.txt.gz
 
 <div>
     <ul>
+    <li><img src="https://electronjs.org/images/favicon.ico" alt="electronjs"><a href="https://electronjs.org/">electronjs.org</a></li>
         <li><a href="https://github.com/Tencent/omi"><img src="https://tencent.github.io/omi/assets/omi-logo2019.svg" alt="omi"> omi</a></li>
     <li><a href="https://graphql.org/"><img src="https://graphql.org/img/logo.svg" alt="graphql.org"> GraphQL</a>
         , <a href="https://habr.com/en/post/326986/">Habr</a>
         , <a href="https://tproger.ru/translations/graphql-beginners-guide/">tproger</a></li>
-    <li>Jira, Slack</li>
     <li><a href="https://habr.com/ru/company/hexlet/blog/274675/">RESTful</a></li>
+    <li><a href="https://youtu.be/fCQBMPjCgxE">Jira</a>, <a href="https://youtu.be/jj93FUQx-Ew">Slack</a></li>
     <li><a href="https://youtu.be/_ucQ8i-MOdM">Lodash</a></li>
     <li><a href="https://github.com/WICG/display-locking">display-locking</a></li>
     <li><a href="https://amp.dev/">AMP</a></li>
-    MVC <br>
     <li><a href="https://ru.wikipedia.org/wiki/CURL">cURL</a></li>
+    <li>WebSQL</li>
     <li>WebAuthn</li>
+    <li>Apache Kafka / Nginx .webservers</li>
+    <li>normalizr</li>
     SSH
     <li><a href="https://webglfundamentals.org/webgl/lessons/ru/">WebGL (3D в браузере)</a></li>
     <li>скрамы, канбаны, стендапы, парное программирование</li>
