--- a/programming/nodejs.html
+++ b/programming/nodejs.html
@@ -5,7 +5,6 @@
     <li><a href="https://youtu.be/GYVGbqSyxiQ">Основы Node.js Сергей Гоголев (2016)</a></li>
     <li><a href="https://itvdn.com/ru/video/node_js">Уроки Node.js</a></li>
     <li><a href="https://youtu.be/3aGSqasVPsI">Node.js Владилен Минин (2019)</a></li>
-    <li><img src="https://electronjs.org/images/favicon.ico" alt="electronjs"><a href="https://electronjs.org/">electronjs.org</a></li>
 </div>
 
     <pre><code>
@@ -149,6 +148,7 @@ request('https://registry.npmjs.org/',
 аутентификация
 проксирование...
 </code></pre></details>
+got
 </div>
 
 <div>
