--- a/guitar/i.html
+++ b/guitar/i.html
@@ -12,8 +12,14 @@
 </div>
 
 <div>
-<a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
-<a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
+  <a href="https://youtu.be/ik64119DsMc">НОТЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+  <a href="https://youtu.be/nlcsEscAtzI">МУЗЫКАЛЬНЫЕ ИНТЕРВАЛЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+  <a href="https://youtu.be/pEFhapzVNnA">АККОРДЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+  <a href="https://youtu.be/mRRKUc2n8kY">ГАММЫ, ПЕНТАТОНИКА, ФРИГИЙСКИЙ, ДОРИЙСКИЙ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+  <a href="https://youtu.be/MkYDG4JfyzU">Простой секрет скоростных соло | John Petrucci</a><br>
+  <a href="https://youtu.be/O47Zeq3XmCM">Как играть блюз - Шаффл блюз (Shuffle Blues)</a><br>
+  <a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
+  <a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
 </div>
 
 <div>
